syntax = "proto3";

package file_streamer;

option go_package = "github.com/gusga/streamer/protos/file_streamer";

service FileStreamer {
  rpc StreamFile(StreamerFileRequest) returns (stream StreamerFileResponse) {};
  rpc FileSize(StreamerFileRequest) returns (FileSizeResponse) {};
  rpc StreamCounter(StreamerCounterRequest)
      returns (stream StreamerCounterResponse) {};
}

message StreamerFileRequest {
  string file_name = 1;
}

message StreamerFileResponse {
  string file_line_content = 1;
}

message FileSizeResponse {
  string file_name = 1;
  int64 file_size = 2;
}

message StreamerCounterRequest { string client_name = 1; }

message StreamerCounterResponse { int32 counter = 1; }
